# cpp_project_template

./: CMakeLists.txt  README.md  build.sh  configure_test.sh  main.cc
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/func/: CMakeLists.txt  func.cc  func.h
src/util/: CMakeLists.txt  util.cc  util.h
test_code/: CMakeLists.txt  test_code.cc
